# SeniorDesign

./: README.md
Command/: commandLogic.py  eyeUtils.py  levelUtils.py  socketUtils.py  thermCam.py
Connectivity/: socketClient.py  socketServer.py
Cpp/: CMakeLists.txt  OpenCVCpp.cpp
ImageProcessing/: NoIROpenCV.py  thermCamTest.py  thermCamTestAvg.py  thermCamTestRange.py
ResistiveSensors/: photoresistTest.py  wtrLvlSensorTest.py
StitchingImages/: imageStitching.py  stitchingUtils.py
