cmake_minimum_required(VERSION 2.8)
project(DisplayImage)
set(raspicam_DIRS "/usr/local/lib/cmake/raspicam")
find_package( OpenCV REQUIRED )
find_package( raspicam REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(DisplayImage OpenCVCpp.cpp)
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( DisplayImage ${raspicam_LIBS})
target_link_libraries( DisplayImage ${raspicam_CV_LIBS})
